<resources>
    <string name="app_name">Login app</string>

    <string name="device_name">Device name</string>
    <string name="please_scan_rfid">Please scan your card to login!</string>
    <string name="please_enter_admin_password">Pleas enter admin password</string>
    <string name="text_login">Login</string>
    <string name="text_logout">Logout</string>
    <string name="text_internet_on">Your device has internet connection!</string>
    <string name="text_internet_off">There is no internet connection!</string>
    <string name="error_text_general">Unknown error occurred, please try again!</string>
    <string name="app_logo">Application logo</string>
    <string name="text_content_description_back">Back</string>
</resources>
